--- a/client/bower.json
+++ b/client/bower.json
@@ -20,6 +20,7 @@
     "angular-bootstrap": "~0.10.0",
     "d3": "~3.4.3",
     "jquery-ui": "~1.10.4",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "crossfilter": "~1.3.7"
   }
 }
