--- a/client/bower.json
+++ b/client/bower.json
@@ -21,6 +21,8 @@
     "d3": "~3.4.3",
     "jquery-ui": "~1.10.4",
     "bootstrap": "~3.1.1",
-    "crossfilter": "~1.3.7"
+    "crossfilter": "~1.3.7",
+    "angular-ui-select": "~0.2.0",
+    "ng-grid": "~2.0.9"
   }
 }
