--- a/api/ricardo_api.wsgi.sample
+++ b/api/ricardo_api.wsgi.sample
@@ -1,9 +1,12 @@
-activate_this = '/home/pom/.virtualenvs/RICARDOAPI/bin/activate_this.py'
+#virtualenv activation
+# change absolute path to virtualenv
+activate_this = '/home/{user}/.virtualenvs/RICARDOAPI/bin/activate_this.py'
 execfile(activate_this, dict(__file__=activate_this))
 
+# import ricardo_api
+# make sure ricardo_api is in path
 import sys
-sys.path.insert(0, '/home/pom/ricardo/api')
-from api import app as application
-
-import sys
+sys.path.insert(0, '{PATH_TO}/ricardo/api')
+from ricardo_api import app as application
+# make sure no stdout
 sys.stdout = sys.stderr
