--- a/api/ricardo_api_apache_wsgi.conf.sample
+++ b/api/ricardo_api_apache_wsgi.conf.sample
@@ -1,29 +1,29 @@
 
-    WSGIDaemonProcess ricardo_api user=pom group=pom threads=5
-    WSGIScriptAlias /ricardo_api /home/pom/ricardo/api/ricardo_api.wsgi
+    WSGIDaemonProcess ricardo_api user={user} group={group} threads=5
+    WSGIScriptAlias /ricardo_api {PATH_TO}/ricardo_api.wsgi
 
-    <Directory /home/pom/ricardo/api>
+    <Directory {PATH_TO}/ricardo_api>
         WSGIProcessGroup ricardo_api
         WSGIApplicationGroup %{GLOBAL}
         Order deny,allow
         Allow from all
     	# Serve files as UTF-8
-AddDefaultCharset utf-8
+		AddDefaultCharset utf-8
 
-# Open the API to queries from any website
-Header set Access-Control-Allow-Origin *
+		# Open the API to queries from any website
+		Header set Access-Control-Allow-Origin *
 
-# Compress files on demand
-# ---------------------------
-SetOutputFilter DEFLATE
-# Netscape 4.x has some problems...
-BrowserMatch ^Mozilla/4 gzip-only-text/html
-# Netscape 4.06-4.08 have some more problems
-BrowserMatch ^Mozilla/4\.0[678] no-gzip
-# MSIE masquerades as Netscape, but it is fine
-# BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
-# NOTE: Due to a bug in mod_setenvif up to Apache 2.0.48
-# the above regex won't work. You can use the following
-# workaround to get the desired effect:
-BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
+		# Compress files on demand
+		# ---------------------------
+		SetOutputFilter DEFLATE
+		# Netscape 4.x has some problems...
+		BrowserMatch ^Mozilla/4 gzip-only-text/html
+		# Netscape 4.06-4.08 have some more problems
+		BrowserMatch ^Mozilla/4\.0[678] no-gzip
+		# MSIE masquerades as Netscape, but it is fine
+		# BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
+		# NOTE: Due to a bug in mod_setenvif up to Apache 2.0.48
+		# the above regex won't work. You can use the following
+		# workaround to get the desired effect:
+		BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
     </Directory>
