RICentities names are now taken from the mdb file

--- a/database_creation/config.json
+++ b/database_creation/config.json
@@ -1,5 +1,5 @@
 {
-	"mdb_filename":"RICardo_Basic_avril14b.mdb",
+	"mdb_filename":"RICardo_Basic_mai2014.mdb",
 	"sqlite_filename":"RICardo_visualisation.sqlite",
 	"sqlite_schema":"RICardo_visualisation_schema.sql",
 	"name_cleaning_csv":"entity_names_cleaning.csv",
