--- a/client/bower.json
+++ b/client/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "RICardo",
   "version": "0.0.1",
-  "homepage": "https://github.com/densitydesign/ccfs14",
+  "homepage": "https://github.com/medialab/ricardo",
   "main": "index.html",
   "authors": [
     "Medialab - SciencesPo"
@@ -23,7 +23,6 @@
     "bootstrap": "~3.1.1",
     "crossfilter": "~1.3.7",
     "angular-ui-select": "~0.2.0",
-    "ng-grid": "~2.0.9",
     "angular-loading-bar": "~0.5.1"
   }
 }
