--- a/client/bower.json
+++ b/client/bower.json
@@ -22,7 +22,7 @@
     "jquery-ui": "~1.10.4",
     "bootstrap": "~3.1.1",
     "crossfilter": "~1.3.7",
-    "angular-ui-select": "~0.2.0",
+    "angular-ui-select": "0.2.0",
     "angular-loading-bar": "~0.5.1"
   }
 }
