--- a/client/bower.json
+++ b/client/bower.json
@@ -23,6 +23,7 @@
     "bootstrap": "~3.1.1",
     "crossfilter": "~1.3.7",
     "angular-ui-select": "0.2.0",
-    "angular-loading-bar": "~0.5.1"
-  }
+    "angular-loading-bar": "~0.5.1",
+    "ng-grid": "2.0.11" 
+ }
 }
