--- a/client/bower.json
+++ b/client/bower.json
@@ -24,6 +24,7 @@
     "crossfilter": "~1.3.7",
     "angular-ui-select": "0.2.0",
     "angular-loading-bar": "~0.5.1",
-    "ng-grid": "2.0.11" 
+    "ng-grid": "2.0.11",
+    "angular-translate": "2.8.1" 
  }
 }
