--- a/client/bower.json
+++ b/client/bower.json
@@ -25,6 +25,7 @@
     "angular-ui-select": "0.2.0",
     "angular-loading-bar": "~0.5.1",
     "ng-grid": "2.0.11",
-    "angular-translate": "2.8.1" 
+    "angular-translate": "2.8.1",
+    "oclazyload": "1.0.8" 
  }
 }
