--- a/client/bower.json
+++ b/client/bower.json
@@ -17,15 +17,16 @@
     "tests"
   ],
   "dependencies": {
-    "angular-bootstrap": "~0.10.0",
     "d3": "~3.4.3",
     "jquery-ui": "~1.10.4",
     "bootstrap": "~3.1.1",
     "crossfilter": "~1.3.7",
+    "ng-grid": "2.0.11",
     "angular-ui-select": "0.2.0",
     "angular-loading-bar": "~0.5.1",
-    "ng-grid": "2.0.11",
+    "angular-bootstrap": "~0.10.0",
     "angular-translate": "2.8.1",
-    "oclazyload": "1.0.8" 
- }
+    "angular-translate-loader-static-files": "2.8.1",
+    "angulartics": "0.19.2"
+  }
 }
