--- a/client/bower.json
+++ b/client/bower.json
@@ -22,11 +22,12 @@
     "angular-translate": "2.8.1",
     "angular-translate-loader-static-files": "2.8.1",
     "angular-ui-select": "0.2.0",
-    "angulartics": "0.19.2",
+    "angulartics-google-analytics": "0.1.3",
     "bootstrap": "~3.1.1",
     "crossfilter": "~1.3.7",
     "d3": "~3.4.3",
     "jquery-ui": "~1.10.4",
-    "ng-grid": "2.0.11"
+    "ng-grid": "2.0.11",
+    "oclazyload": "~1.0.9"
   }
 }
