--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,15 @@
   "description": "If you want to run your instance of RICardo locally on your machine, be sure you have the following requirements installed.",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "./node_modules/gulp/bin/gulp.js server"
   },
   "author": "",
   "license": "BSD-2-Clause",
   "devDependencies": {
     "gulp": "~3.9.0",
     "gulp-concat": "~2.6.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-ng-annotate": "~1.1.0",
     "gulp-uglify": "~1.5.1"
   }
