--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,17 @@
-Flask
-flask-cors
-flask-compress
+bottle==0.12.9
+csvkit==0.9.1
+dbf==0.94.3
+decorator==4.0.9
+jdcal==1.2
+networkx==1.11
+openpyxl==2.2.0b1
+pbr==1.6.0
+python-dateutil==2.2
+six==1.9.0
+SQLAlchemy==1.0.12
+stevedore==1.7.0
+virtualenv==13.1.2
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.0
+wheel==0.24.0
+xlrd==0.9.4
