--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -15,3 +15,12 @@ virtualenv-clone==0.2.6
 virtualenvwrapper==4.7.0
 wheel==0.24.0
 xlrd==0.9.4
+Flask==0.10.1
+Flask-Compress==1.3.0
+Flask-Cors==2.1.0
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+six==1.9.0
+Werkzeug==0.10.4
+wheel==0.24.0
