--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,7 @@
   "devDependencies": {
     "gulp": "~3.9.0",
     "gulp-concat": "~2.6.0",
-    "gulp-livereload": "^3.8.1",
     "gulp-ng-annotate": "~1.1.0",
-    "gulp-uglify": "~1.5.1"
+    "gulp-uglify": "~1.5.1",
   }
 }
