--- a/database_creation/config.json
+++ b/database_creation/config.json
@@ -1,8 +1,8 @@
 {
 	"mdb_filename": "RICardo_v1_032015.mdb",
-	"sqlite_filename": "RICardo_visualisation.sqlite",
-	"sqlite_schema": "RICardo_visualisation_schema.sql",
-	"new_sqlite_schema": "new_RICardo_visualisation_schema.sql",
+	"access_toconversion_schema": "RICardo_access_schema.sql",
+	"sqlite_filename": "RICardo.sqlite",
+	"sqlite_schema": "RICardo_schema.sql",
 	"sqlite_viz": "sqlite_viz.sqlite ",
 	"name_cleaning_csv": "entity_names_cleaning.csv",
 	"RICnames_csv": "entity_RICnames.csv",
