--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.0.0",
   "description": "If you want to run your instance of RICardo locally on your machine, be sure you have the following requirements installed.",
+  "repository": "http://github.com/medialab/ricardo",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,9 +11,15 @@
   "author": "",
   "license": "BSD-2-Clause",
   "devDependencies": {
+    "del": "^2.2.0",
     "gulp": "~3.9.0",
     "gulp-concat": "~2.6.0",
+    "gulp-csso": "^2.0.0",
+    "gulp-gitshasuffix": "^1.0.0",
+    "gulp-if": "^2.0.1",
     "gulp-ng-annotate": "~1.1.0",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-uglify": "~1.5.1",
+    "gulp-useref": "^3.1.0"
   }
 }
