--- a/.gitignore
+++ b/.gitignore
@@ -1,77 +1,13 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-bin/
-build/
-develop-eggs/
-dist/
-eggs/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.cache
-nosetests.xml
-coverage.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-
-# Rope
-.ropeproject
-
-# Django stuff:
-*.log
-*.pot
-
-# Sphinx documentation
-docs/_build/
-
-# Mac hidden file
+.idea/
+*.iml
+*.iws
+*.eml
+out/
 .DS_Store
-
-# Client bower components
-client/lib/bower_components/
-
-# Client data
-client/js/config.js
-
-# Client setting
-client/data/
-
-# data
-*.sqlite
-database_creation/out_data/*.sqlite
-database_creation/out_data/*.csv
-database_creation/in_data/*.csv
-database_creation/in_data/*.mdb
-
-# API log
-ricardoapi.log*
-
-# Libreoffice lock files
-.~lock.*
+.svn
+log/*.log
+tmp/**
+node_modules/
+.sass-cache
+css/reveal.min.css
+js/reveal.min.js
