--- a/.gitignore
+++ b/.gitignore
@@ -60,15 +60,14 @@ client/lib/bower_components/
 # Client data
 client/js/config.js
 
-# Client setting
-client/data/
-
 # data
 *.sqlite
+client/data/*.csv
 database_creation/out_data/*.sqlite
 database_creation/out_data/*.csv
 database_creation/in_data/*.csv
 database_creation/in_data/*.mdb
+
 
 # API log
 ricardoapi.log*
