--- a/analysis/WorldTradeWeb/package.json
+++ b/analysis/WorldTradeWeb/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "graphology": "^0.11.3",
+    "graphology-communities-louvain": "^0.1.1",
     "graphology-gexf": "^0.3.1",
     "graphology-hits": "^0.1.0",
     "graphology-metrics": "^1.5.0",
