counting bilateral flows by source_type, reporting_type...

--- a/analysis/WorldTradeWeb/configuration.json
+++ b/analysis/WorldTradeWeb/configuration.json
@@ -4,5 +4,6 @@
 	"endDate":1938,
 	"writeGexf":0,
 	"gapMinder_metric_filename":"gapminderRICardo.json",
-	"network_metric_filename": "networkMetrics.json"
+	"network_metric_filename": "networkMetrics.json",
+	"general_stat_filename": "general_stat.json"
 }
