--- a/analysis/WorldTradeWeb/package.json
+++ b/analysis/WorldTradeWeb/package.json
@@ -9,6 +9,6 @@
     "graphology-hits": "^0.1.0",
     "graphology-metrics": "^1.5.0",
     "graphology-pagerank": "^1.1.0",
-    "sqlite3": "^3.1.13"
+    "sqlite3": "4.0.2"
   }
 }
