--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,24 @@
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/gulp/bin/gulp.js server"
+    "dev": "./node_modules/gulp/bin/gulp.js server",
+    "build": "./node_modules/gulp/bin/gulp.js"
   },
   "author": "",
   "license": "BSD-2-Clause",
-  "devDependencies": {
+  "dependencies": {
+    "angular-ui-bootstrap": "~0.14",
+    "angular-loading-bar": "~0.5.1",
+    "angular-translate": "2.8.1",
+    "angular-translate-loader-static-files": "2.8.1",
+    "ui-select": "~0.19.0",
+    "angulartics-google-analytics": "0.1.3",
+    "bootstrap": "~3.1.1",
+    "crossfilter": "~1.3.7",
+    "d3": "~3.4.3",
+    "jquery-ui": "~1.10.4",
+    "ng-grid": "2.0.1 ",
+    "oclazyload": "~1.0.9",
     "del": "^2.2.0",
     "gulp": "~3.9.0",
     "gulp-concat": "~2.6.0",
