--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,29 @@
-server {
-    listen 80;
+worker_processes  2;
+daemon off;
+events {
+    worker_connections  1024;
+}
 
-    location / {
-        alias /client;
-    }
-    location /api {
-        include uwsgi_params;
-        uwsgi_pass unix:///tmp/uwsgi.sock;
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    server_tokens off;
+
+    keepalive_timeout  65;
+
+    gzip  on;
+
+    server {
+        listen       80;
+        location / {
+            root /client;
+        }
+
+        location /api {
+              include uwsgi_params;
+            uwsgi_pass unix:///tmp/uwsgi.sock;
+        }
     }
 }
