--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "gulp-rev-replace": "^0.4.3",
     "gulp-uglify": "~1.5.1",
     "gulp-useref": "^3.1.0",
+    "gulp-replace": "1.0.0",
     "bower": "1.8.8"
   }
 }
