--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,3 +35,16 @@ build_api_image:
     - staging
     - prod
     - tags
+
+deploy:
+  stage: deploy
+  image: cdrx/rancher-gitlab-deploy
+  script:
+    - upgrade --rancher-key $RANCHER_ACCESS_KEY --rancher-secret $RANCHER_SECRET_KEY --rancher-url $RANCHER_URL --environment $RANCHER_ENV --stack $RANCHER_STACK --service $RANCHER_API_SERVICE --start-before-stopping
+    - upgrade --rancher-key $RANCHER_ACCESS_KEY --rancher-secret $RANCHER_SECRET_KEY --rancher-url $RANCHER_URL --environment $RANCHER_ENV --stack $RANCHER_STACK --service $RANCHER_WEB_SERVICE --start-before-stopping
+  environment:
+    name: $CI_COMMIT_REF_SLUG
+    url: $STAGING_BASEURL
+  only:
+    - staging
+    - production
