:construction_worker: continuous deployment: typo

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build_client_image:
     url: $BASEURL
   only:
     - staging
-    - prod
+    - production
     - tags
 
 build_api_image:
@@ -33,7 +33,7 @@ build_api_image:
     url: $BASEURL
   only:
     - staging
-    - prod
+    - production
     - tags
 
 deploy:
