--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -32,6 +32,9 @@ ENV NODE_ENV production
 
 RUN apk --update add --no-cache git
 
+RUN mkdir /client
+RUN mkdir /WorldTradeWeb
+
 USER node
 
 COPY --chown=node:node client /client
@@ -49,6 +52,9 @@ FROM nginx:alpine
 
 ENV API_PORT=8000
 ENV API_HOST=api
+
+
+RUN mkdir /ricardo
 
 # GET the exploration website from build image
 COPY --from=static_client --chown=nginx:nginx /client/build /ricardo/client
