[client]: Update of ng-grid

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "angular-touch": "^1.8.0",
     "angular-translate": "^2.18.3",
     "angular-translate-loader-static-files": "^2.18.3",
+    "angular-ui-grid": "^4.8.3",
     "angulartics": "^1.6.0",
     "angulartics-google-analytics": "^0.5.0",
     "bootstrap": "^3.4.1",
@@ -33,7 +34,6 @@
     "d3": "^3.4.3",
     "jquery": "^1.12.4",
     "jquery-ui": "^1.12.1",
-    "ng-grid": "^2.0.1",
     "oclazyload": "^1.1.0",
     "prettier": "^2.0.5",
     "sigma": "1.2.1",
