--- a/docker/client/nginx.conf
+++ b/docker/client/nginx.conf
@@ -30,7 +30,7 @@ http {
     }
 
     location /api {
-      proxy_pass http://api;
+      proxy_pass http://api/;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_redirect off;
