--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ client/dist
 # data
 *.sqlite
 client/src/public/data/*.csv
+client/src/public/csv/*.csv
 database_creation/out_data/*.sqlite
 database_creation/out_data/*.csv
 database_creation/in_data/*.csv
