--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,10 @@
   "main": "src/js/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && webpack --bail --progress --profile",
-    "server": "webpack-dev-server --history-api-fallback --inline --progress --open --watch",
-    "start": "npm run server"
+    "build": "rimraf dist && rimraf ./src/public/csv/* && npm run sync:csv && webpack --bail --progress --profile",
+    "server": "npm run sync:csv && webpack-dev-server --history-api-fallback --inline --progress --open --watch",
+    "start": "npm run server",
+    "sync:csv": "node ./download-csv.js"
   },
   "author": "",
   "license": "BSD-2-Clause",
