--- a/analysis/WorldTradeWeb/package.json
+++ b/analysis/WorldTradeWeb/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "dependencies": {
     "async": "^2.6.0",
-    "graphology": "^0.11.3",
+    "graphology": "^0.14.1",
     "graphology-communities-louvain": "^0.1.1",
-    "graphology-gexf": "^0.3.1",
+    "graphology-gexf": "^0.5.0",
     "graphology-hits": "^0.1.0",
-    "graphology-metrics": "^1.5.0",
+    "graphology-metrics": "^1.6.0",
     "graphology-pagerank": "^1.1.0",
-    "sqlite3": "4.0.2"
+    "sqlite3": "^4.1.0"
   }
 }
