Preparing transnum presentation: - new script to add FT and GPH metadata to networks - computing networks on aggregated flows

--- a/analysis/WorldTradeWeb/configuration.json
+++ b/analysis/WorldTradeWeb/configuration.json
@@ -1,9 +1,9 @@
 {
-	"RICardo_data":"RICardo_viz.sqlite",
-	"startDate":1833,
-	"endDate":1938,
-	"writeGexf":0,
-	"gapMinder_metric_filename":"gapminderRICardo.json",
-	"network_metric_filename": "networkMetrics.json",
-	"general_stat_filename": "general_stat.json"
+  "RICardo_data": "RICardo_viz.sqlite",
+  "startDate": 1833,
+  "endDate": 1938,
+  "writeGexf": true,
+  "gapMinder_metric_filename": "gapminderRICardo.json",
+  "network_metric_filename": "networkMetrics.json",
+  "general_stat_filename": "general_stat.json"
 }
