adapt build process to new version

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 ############ building database
-FROM python:2.7-alpine3.8 AS ricardo_data
+FROM python:3.8.6-alpine3.12 AS ricardo_data
 
-ARG DATA_VERSION_REF=2017.12.with.FT
+ARG DATA_VERSION_REF=2017.12.2
 ENV DATA_VERSION_REF=${DATA_VERSION_REF}
 
 RUN  apk add --no-cache git 
@@ -10,13 +10,13 @@ RUN mkdir /ricardo_data
 WORKDIR /ricardo_data
 
 RUN git --version
-RUN git clone https://github.com/medialab/ricardo_data .
-RUN git checkout ${DATA_VERSION_REF}
+RUN git clone -b ${DATA_VERSION_REF} --single-branch --depth 1 https://github.com/medialab/ricardo_data .
 
 WORKDIR /ricardo_data/database_scripts
 
 RUN pip install -r requirements.txt
-RUN python RICardo_website_sqlite_creation.py
+RUN python flows.py aggregate
+RUN python flows.py deduplicate
 
 ################ Build API image
 FROM python:2.7.16-alpine3.10
