--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,9 @@
   "repository": "http://github.com/medialab/ricardo",
   "main": "src/js/app.js",
   "scripts": {
+    "rimraf": "./node_modules/rimraf/bin.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && rimraf ./src/public/csv/* && npm run sync:csv && webpack --bail --progress --profile",
+    "build": "rimraf build && rimraf ./src/public/csv/* && npm run sync:csv && webpack --bail --progress --profile",
     "server": "npm run sync:csv && webpack-dev-server --history-api-fallback --inline --progress --open --watch",
     "start": "npm run server",
     "sync:csv": "node ./download-csv.js"
