--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "angular-translate-loader-static-files": "^2.18.3",
     "angular-ui-grid": "^4.8.3",
     "angulartics": "^1.6.0",
-    "angulartics-google-analytics": "^0.5.0",
+    "angulartics-piwik": "^1.0.6",
     "bootstrap": "^3.4.1",
     "crossfilter": "^1.3.12",
     "d3": "^3.4.3",
