--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,7 @@
 ############ building database
 FROM python:3.8.6-alpine3.12 AS ricardo_data
 
-ARG DATA_VERSION_REF=2017.12.with.FT
+ARG DATA_VERSION_REF=2017.12.2
 ENV DATA_VERSION_REF=${DATA_VERSION_REF}
 
 RUN apk add --no-cache git icu-dev build-base gcc musl-dev
