--- a/docker/.env
+++ b/docker/.env
@@ -15,3 +15,6 @@ CLIENT_HOST_HTTP_PORT=8080
 
 # Http host port for the application
 HOST_HTTP_PORT=80
+
+# for test-prod version which data version to use
+DATA_VERSION_REF=2022.06
