--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,12 +45,10 @@ deploy:
   dependencies:
     - build_client
     - build_api
+  before_script:
+    - export KUBECONFIG=$kubeconfig_file
   script:
     - NS=ricardo
-    - kubectl config set-cluster k8s --server="$KUBE_URL" --certificate-authority="$KUBE_CA_PEM_FILE"
-    - kubectl config set-credentials gitlab-admin --token="$KUBE_TOKEN"
-    - kubectl config set-context default --cluster=k8s --user=gitlab-admin
-    - kubectl config use-context default
     - kubectl apply -f k8s/namespace.yml
     - cp ${API_SECRETS} k8s/overlays/$CI_COMMIT_REF_SLUG/api.env
     - kubectl apply -k k8s/overlays/$CI_COMMIT_REF_SLUG
