[API] port to python 3.10 - clean deps and fix versions in requirements.txt - fix client node version to latest 16.* version (gallium)

--- a/docker/client/Dockerfile
+++ b/docker/client/Dockerfile
@@ -7,7 +7,7 @@ ADD ./docker-entrypoint.sh /docker-entrypoint.sh
 RUN ["chmod", "+x", "/docker-entrypoint.sh"]
 RUN apt-get update && apt-get -y install npm curl
 RUN npm install -g n
-RUN n lts
+RUN n gallium
 RUN npm i npm@latest -g
 
 EXPOSE 80
