--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,9 +1,6 @@
-networkx==1.11
-Flask==0.10.1
-Flask-Compress==1.3.0
-Flask-Cors==2.1.0
-csvkit
-feedparser==5.2.1
-gunicorn
-gunicorn[gthread]
-futures
+networkx==3.2
+Flask==3.0.0
+Flask-Compress==1.14
+Flask-Cors==4.0.0
+feedparser==6.0.10
+gunicorn[gthread]==21.2.0
