--- a/analysis/WorldTradeWeb/package.json
+++ b/analysis/WorldTradeWeb/package.json
@@ -7,6 +7,7 @@
     "graphology-communities-louvain": "^2.0.1",
     "graphology-gexf": "^0.10.1",
     "graphology-metrics": "^2.1.0",
+    "lodash": "^4.17.21",
     "sqlite3": "^4.1.0"
   }
 }
